- Fix for jQuery 3
- Fix position popup for collection action links
- Fix recordselect in form open with position popup

= 4.0.2
- Fix using update_columns in field search with search UI submitting a hash, such as date fields
- Support disabling update_columsns on field_search

= 4.0.1
- Add :text_editor show_ui, to avoid escaping html code
- Fix action link on association column named record

= 4.0.0
- Add tabbed_by to group of columns in forms. The columns in the group must be collection associations, with a common column or association, used to partition them in different tabs.
- Fix tableless in rails >= 7.1
- Stop using cow_proxy for thread safety:
  - Added ProxyColumn and require using active_scaffold_config.columns.override(:column_name) to change a column per request
  - Action links can't be changed, added or removed, add all links and use ignore_method to control when they are displayed
  - Require using active_scaffold_config.override_columns to exclude or add columns
- Thread safety enabled by default, can't be disabled, deprecate ActiveScaffold.threadsafe!
- Support subgroups on field search

= 3.7.12
- Fix using update_columns in field search with search UI submitting a hash, such as date fields
- Support disabling update_columsns on field_search

= 3.7.11.1
- Fix action link on association column named record

= 3.7.11
- Add partial list_messages_content to reduce code duplication, and better support replacing list view with other way to render records
- Support selector for records body in create_record_row JS method, better support replacing list view with other way to render records
- Improve detection of member action links when list view is replaced with other structure, based on 'record' html class, instead of tags
- Support :table position for member action links, replacing the whole table